tests/vendor/valid/trivial/precedence_3.c
//expect 0
//tags: trivial, binary, logical, precedence
int main() {
    return (1 || 0) && 0;
}