tests/vendor/invalid/semantics/switch_on_function.c
//tags: functions, switch
int main() {
    int f();
    switch (f)
        return 0;
}